--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Enabling H2 Console
 #spring.h2.console.enabled=true
 
-#debug=true
+debug=true
 
 #                       MYSQL CONNECTION
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
@@ -14,4 +14,3 @@ spring.datasource.password = dawid
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-
