--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,21 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.1.5.RELEASE</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity4 -->
+
+
+
+        <!--<dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.11.RELEASE</version>
+        </dependency>-->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
             <version>3.0.4.RELEASE</version>
         </dependency>
+
+
 
         <!--<dependency>-->
             <!--<groupId>org.springframework.security</groupId>-->
@@ -108,6 +117,11 @@
         <!--securiy-core vs starter-security?????-->
 
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <!--fragment kodu pozwala na zbudowanie i uruchomienie aplikacji-->
