--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,38 @@
-# Enabling H2 Console
-#spring.h2.console.enabled=true
+
 
 debug=true
 
-#                       MYSQL CONNECTION
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+# ===============================
+# = DATA SOURCE
+# ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/springpasswordwallet?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = dawid
 spring.datasource.password = dawid
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-## Hibernate Properties
+# Enabling H2 Console
+#spring.h2.console.enabled=true
+
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
+
+
+# ===============================
+# =SMTP EMAIL
+# ===============================
+spring.mail.host = smtp.gmail.com
+mail.smtp.ssl.trust = smtp.gmail.com
+#spring.mail.username = dwiktorski14@gmail.com
+#spring.mail.password = Rammstein666$
+spring.mail.username= dwiktorski14@gmail.com
+spring.mail.password= Rammstein666$
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+mail.smtp.starttls.required=true
+mail.smtp.socketFactory.fallback=false
